# pydantic-models-for-google-wallet-api

./: LICENSE  README.md  pyproject.toml
src/pydantic_models_for_google_wallet_api/: __init__.py  add_message_request.py  app_link_data.py  barcode.py  barcode_render_encoding.py  barcode_type.py  callback_options.py  class_template_info.py  date_time.py  event_ticket_class.py  event_ticket_object.py  flight_class.py  flight_object.py  generic_class.py  generic_object.py  gift_card_class.py  gift_card_object.py  grouping_info.py  image.py  image_module_data.py  info_module_data.py  issuer.py  jwt.py  jwt_resource.py  lat_long_point.py  links_module_data.py  localized_string.py  loyalty_class.py  loyalty_object.py  media.py  merchant_location.py  message.py  money.py  multiple_devices_and_holders_allowed_status.py  notification_settings_for_updates.py  offer_class.py  offer_object.py  pagination.py  pass_constraints.py  permissions.py  (+14 more)
